@@ -58,6 +58,9 @@ Release 2.7.3 - UNRELEASED
     MAPREDUCE-6635. Unsafe long to int conversion in UncompressedSplitLineReader
     and IndexOutOfBoundsException. (Junping Du via vvasudev)
 
+    MAPREDUCE-6645. TestWordStats outputs logs under directories other than
+    target/test-dir. (Gabor Liptak via aajisaka)
+
 Release 2.7.2 - 2016-01-25
 
   INCOMPATIBLE CHANGES
